--- a/package.json
+++ b/package.json
@@ -1,42 +1,48 @@
 {
-    "name": "semana4_proyecto_final",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start-dev": "node index.js",
-        "start": "node index.js",
-        "migrate": "npx sequelize-cli db:migrate",
-        "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate && npx sequelize-cli db:seed:all  ",
-        "test": "cross-env NODE_ENV=test jest  --forceExit --json",
-        "pretest": "cross-env NODE_ENV=test npm run migrate:reset"
-    },
-    "jest": {
-        "testEnvironment": "node",
-        "coveragePathIgnorePatterns": [
-            "/node_modules/"
-        ]
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "body-parser": "^1.19.0",
-        "cors": "^2.8.5",
-        "express": "^4.17.1",
-        "express-promise-router": "^4.0.1",
-        "jsonwebtoken": "^8.5.1",
-        "morgan": "^1.10.0",
-        "mysql2": "^2.2.5",
-        "nodemon": "^2.0.6",
-        "sequelize": "^6.3.5",
-        "sequelize-cli": "^6.2.0",
-        "sqlite3": "^5.0.0"
-    },
-    "devDependencies": {
-        "cross-env": "^7.0.2",
-        "jest": "^26.6.3",
-        "supertest": "^6.0.1"
-    }
+  "name": "tabla",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.1.0",
+    "@mui/material": "^5.1.0",
+    "@mui/styled-engine-sc": "^5.1.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "material-table": "^1.69.3",
+    "react-bootstrap": "^2.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
